# kronosnet

./: .gitarchivever  .gitattributes  .gitignore  .travis.yml  CLAUDE.md  CNAME  COPYRIGHT  Makefile.am  NOTES_TO_PACKAGE_MAINTAINERS  README  README.licence  README.md  STYLE_GUIDE.md  TODO  autogen.sh  cfg.c  cfg.h  cnet.c  cnet.h  cnet_tool.c  conf.c  conf.h  configure.ac  controlt.c  controlt.h  controlt_comm.c  controlt_comm.h  example.conf  index.html  knet.c  knet.h  knet_tool.c  knethandle.h  kronosnet.spec  kronosnet.spec.in  kronosnetd.spec  logging.c  logging.h  main.c  netsocket.c  (+23 more)
build-aux/: Makefile.am  check.mk  doxyxml.c  git-version-gen  knet_valgrind.supp  knet_valgrind_helgrind.supp  knet_valgrind_memcheck.supp  release.mk  rust-regen.sh  rust.mk  update-copyright.sh
common/: Makefile.am  netutils.c  netutils.h  netutils_test.c
docs/: Makefile.am  kronosnet_architecture.odp
docs/Kronosnet/: publican.cfg
init/: Makefile.am  kronosnetd.default  kronosnetd.in  kronosnetd.service.in
knetd/: CLI_REFERENCE.md  CLI_SHORTCUTS.md  CODE_TOUR.md  CONTRIBUTING.md  Cargo.toml  INSTALLATION.md  Makefile.am  NODE_AGNOSTIC_CONFIG.md  NOZZLE_UNIQUE_ADDRESSING.md  PACKAGING.md  PROJECT_STATUS.md  README.md  UNIQUE_ADDRESSING_IMPLEMENTATION.md  VISUALIZATION.md  knetd-multi-instance.toml.example
knetd/knetctl/: Cargo.toml
knetd/knetd/: Cargo.toml  knetd.toml.example
knetd/knetd-common/: Cargo.toml
knetd/man/: knetctl.1  knetd.8  knetd.conf.5
knetd/systemd/: README.md  knetd.service  knetd@.service
knetd/tests/: test_knetd.sh
kronosnetd/: Makefile.am  cfg.c  cfg.h  etherfilter.c  etherfilter.h  keygen.c  knet-keygen.8  kronosnetd.8  kronosnetd.logrotate.in  logging.c  logging.h  main.c  netutils.c  netutils.h  utils.c  vty.c  vty.h  vty_auth.c  vty_auth.h  vty_cli.c  vty_cli.h  vty_cli_cmds.c  vty_cli_cmds.h  vty_test.c  vty_utils.c  vty_utils.h
libknet/: Doxyfile  Doxyfile.in  Makefile.am  common.c  common.h  compat.c  compat.h  compress.c  compress.h  compress_bzip2.c  compress_bzip2.h  compress_bzip2_remap.h  compress_canary.c  compress_lz4.c  compress_lz4.h  compress_lz4_remap.h  compress_lz4hc.c  compress_lzma.c  compress_lzma.h  compress_lzma_remap.h  compress_lzo2.c  compress_lzo2.h  compress_lzo2_remap.h  compress_model.h  compress_zlib.c  compress_zlib.h  compress_zlib_remap.h  compress_zstd.c  crypto.c  crypto.h  crypto_canary.c  crypto_gcrypt.c  crypto_model.h  crypto_nss.c  crypto_nss.h  crypto_nss_remap.h  crypto_openssl.c  crypto_openssl.h  crypto_openssl_remap.h  etherfilter.c  (+65 more)
libknet/bindings/: Makefile.am
libknet/man/: Doxyfile.in  Makefile.am  knet_addrtostr.3  knet_get_compress_list.3  knet_get_crypto_list.3  knet_get_transport_id_by_name.3  knet_get_transport_list.3  knet_get_transport_name_by_id.3  knet_handle_add_datafd.3  knet_handle_clear_stats.3  knet_handle_compress.3  knet_handle_crypto.3  knet_handle_enable_filter.3  knet_handle_enable_pmtud_notify.3  knet_handle_enable_sock_notify.3  knet_handle_free.3  knet_handle_get_channel.3  knet_handle_get_compress_list.3  knet_handle_get_crypto_list.3  knet_handle_get_datafd.3  knet_handle_get_stats.3  knet_handle_get_transport_id_by_name.3  knet_handle_get_transport_list.3  knet_handle_get_transport_name_by_id.3  knet_handle_get_transport_reconnect_interval.3  knet_handle_new.3  knet_handle_pmtud_get.3  knet_handle_pmtud_getfreq.3  knet_handle_pmtud_setfreq.3  knet_handle_remove_datafd.3  knet_handle_set_transport_reconnect_interval.3  knet_handle_setfwd.3  knet_host_add.3  knet_host_enable_status_change_notify.3  knet_host_get_host_list.3  knet_host_get_id_by_host_name.3  knet_host_get_name_by_host_id.3  knet_host_get_policy.3  knet_host_get_status.3  knet_host_remove.3  (+26 more)
libknet/tests/: Makefile.am  api-check.mk  api-test-coverage  api_knet_addrtostr.c  api_knet_get_compress_list.c  api_knet_get_crypto_cipher_list.c  api_knet_get_crypto_hash_list.c  api_knet_get_crypto_list.c  api_knet_get_transport_id_by_name.c  api_knet_get_transport_list.c  api_knet_get_transport_name_by_id.c  api_knet_handle_add_datafd.c  api_knet_handle_clear_stats.c  api_knet_handle_compress.c  api_knet_handle_crypto.c  api_knet_handle_crypto_rx_clear_traffic.c  api_knet_handle_crypto_set_config.c  api_knet_handle_crypto_start_rekey.c  api_knet_handle_crypto_stop_rekey.c  api_knet_handle_crypto_use_config.c  api_knet_handle_crypto_use_newkey.c  api_knet_handle_enable_access_lists.c  api_knet_handle_enable_filter.c  api_knet_handle_enable_onwire_ver_notify.c  api_knet_handle_enable_pmtud_notify.c  api_knet_handle_enable_sock_notify.c  api_knet_handle_free.c  api_knet_handle_get_channel.c  api_knet_handle_get_compress_list.c  api_knet_handle_get_crypto_list.c  api_knet_handle_get_datafd.c  api_knet_handle_get_host_defrag_bufs.c  api_knet_handle_get_onwire_ver.c  api_knet_handle_get_stats.c  api_knet_handle_get_threads_timer_res.c  api_knet_handle_get_transport_id_by_name.c  api_knet_handle_get_transport_list.c  api_knet_handle_get_transport_name_by_id.c  api_knet_handle_get_transport_reconnect_interval.c  api_knet_handle_new.c  (+81 more)
libknet/wireshark/: Makefile.am  packet-kronosnet.c  packet-kronosnet.h
libnozzle/: Makefile.am  api-test-coverage  internals.c  internals.h  libnozzle.c  libnozzle.h  libnozzle.pc.in  libnozzle_bsd.c  libnozzle_exported_syms  libnozzle_linux.c  libnozzle_solaris.c
libnozzle/bindings/: Makefile.am
libnozzle/man/: Doxyfile.in  Makefile.am
libnozzle/tests/: Makefile.am  api-test-coverage  (+22 more)
libtap/: Makefile.am  api-test-coverage  libtap-private.h  libtap.c  libtap.h  libtap.pc.in  libtap_exported_sym  libtap_exported_syms  libtap_private.h  tap_test.c
libvty/: Makefile.am  libvty.pc.in  vty.c  vty_auth.c  vty_cli.c  vty_cli_cmds.h  vty_utils.c
man/: Doxyfile-knet.in  Doxyfile-nozzle.in  Makefile.am  api-to-man-page-coverage  doxyxml.c  knet-keygen.8  knetctl.1  kronosnetd.8
tests/: Makefile.am  check_packet.c  khandle_test.c  knet_test.c  listener_test.c  lookup_bench.c  netutils_test.c  pckt_test.c  ping_test.c  ring_test.c  tap_test.c  timediff_test.c  utils_test.c  vty_test.c
(+94 files in other folders)
